corrected image widths and heights and corrected hero image to display correctly on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,7 @@ p {
     font-weight: 500;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
+
 
 .img-stc1 {
     display: grid;
@@ -189,6 +186,8 @@ img {
 
 .about-photo {
     border-radius: 1rem;
+    width: 100%;
+    height: 100%;
 }
 
 /*classes styling*/
@@ -224,5 +223,14 @@ img {
     #logo-img {
         width: 50px;
         height: 50px;
+    }
+
+    .hero-image {
+        height: 30vh;
+        background-image: url('../img/gym1.jpg');
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: right;
     }
 }
